@@ -8,10 +8,10 @@ import java.util.List;
 import java.util.Optional;
 
 import org.testng.annotations.BeforeClass;
+import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import by.epam.jwdshape.parser.impl.ConeParser;
-
 
 public class ConeParserTest {
 
@@ -32,17 +32,51 @@ public class ConeParserTest {
 		assertTrue(parser.parse("").isEmpty());
 	}
 
-	@Test
-	public void testCorrectLine() {		
-		double[] actualArray = parser.parse("  -45 52     -8 5.5 87 ").get();
-		double[] expectedArray = { -45d, 52d, -8d, 5.5d, 87d };
+	@Test(dataProvider = "correctLines")
+	public void testCorrectLine(String sourceLine, List<Double> expectedList) {
+		double[] actualArray = parser.parse(sourceLine).get();
+		Object[] expectedArray = expectedList.toArray();
 		assertEquals(actualArray, expectedArray);
 	}
-	
-	@Test
-	public void testIncorrectLine() {		
-		Optional<double[]> actualArray = parser.parse("a a");		
+
+	@DataProvider(name = "correctLines")
+	public Object[][] dataForTestCorrectLines() {
+		return new Object[][] { { "  -45 52     -8 5.5 87 ", List.of(-45d, 52d, -8d, 5.5, 87d) },
+				{ "1 2 3 5 6", List.of(1d, 2d, 3d, 5d, 6d) },
+				{ "1.5 2.4 1.4 5.5 6.6", List.of(1.5, 2.4, 1.4, 5.5, 6.6) },
+				{ "8 5 9 8.4 11", List.of(8d, 5d, 9d, 8.4, 11d) }, { "0 0 0 3 3", List.of(0d, 0d, 0d, 3d, 3d) } };
+	}
+
+	@Test(dataProvider = "incorrectLines")
+	public void testIncorrectLine(String sourceLine) {
+		Optional<double[]> actualArray = parser.parse(sourceLine);
 		assertTrue(actualArray.isEmpty());
+	}
+
+	@DataProvider(name = "incorrectLines")
+	public Object[][] dataForTestIncorrectLines() {
+		return new Object[][] { { "a b c d e" }, { "8888" }, { "!1 5 8 4.5 2" }, { "8.5 7.4 6.2 5.8 9 9" },
+				{ "54 -87 -98 -1 2" }, { "0 0 0 0 0" } };
+	}
+
+	@Test(dataProvider = "listLines")
+	public void testListLines(List<String> sourceList, List<List<Double>> expectedData) {
+		List<double[]> actualListData = parser.parse(sourceList).get();
+		List<double[]> expectedList = expectedData.stream()
+				.map(list -> list.stream().mapToDouble(value -> value).toArray()).toList();
+		for (double[] actualArray : actualListData) {
+			assertEquals(actualArray, expectedList.get(actualListData.indexOf(actualArray)));
+		}
+	}
+
+	@DataProvider(name = "listLines")
+	public Object[][] dataForTestListLines() {
+		return new Object[][] { {
+				List.of("  -45 52     -8 5.5 87 ", "1 2 3 5 6", "1.5 2.4 1.4 5.5 6.6", "8 5 9 8.4 11", "0 0 0 3 3",
+						"a b c d e", "8888", "!1 5 8 4.5 2", "8.5 7.4 6.2 5.8 9 9", "54 -87 -98 -1 2", "0 0 0 0 0"),
+				List.of(List.of(-45d, 52d, -8d, 5.5, 87d), List.of(1d, 2d, 3d, 5d, 6d),
+						List.of(1.5, 2.4, 1.4, 5.5, 6.6), List.of(8d, 5d, 9d, 8.4, 11d),
+						List.of(0d, 0d, 0d, 3d, 3d)) } };
 	}
 
 	@Test
@@ -52,7 +86,9 @@ public class ConeParserTest {
 
 	@Test
 	public void testEmptySourceList() {
-		assertTrue(parser.parse(Collections.emptyList()).isEmpty());
+		List<double[]> actualList = parser.parse(Collections.emptyList()).get();
+		List<double[]> expectedArray = List.of();
+		assertEquals(actualList, expectedArray);
 	}
 
 }
